<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAPIExample</string>
    <string name="imageview_content_description">ImageView</string>
    
    <!-- Toast Example -->
    <string name="toast_title">Toast Example</string>
    <string name="toast_main_title">Press button below to start toast!!</string>
    <string name="toast_short_text">Toast with LENGTH_SHORT duration</string>
    <string name="toast_long_text">Toast with LENGTH_LONG duration</string>
    <string name="toast_4_short_text">Toast with 4 times LENGTH_SHORT duration</string>
    <string name="toast_4_long_text">Toast with 4 times LENGTH_LONG duration</string>
    <string name="toast_custom_background">Toast with Custom Background</string>
    
    <!-- Camera Example -->
    <string name="camera_title">Camera Example</string>
    <string name="camera_main_title">Press buttons below to start camera intent!!</string>
    <string name="camera_with_filepath_text">Start camera with specified filepath</string>
    <string name="camera_without_filepath_text">Start camera w/o specified filepath</string>
    
    <!-- Gallery Example -->
    <string name="gallery_title">Gallery Example</string>
    <string name="gallery_main_title">Press buttons below to start gallery intent!!</string>
    <string name="gallery_only_text">Gallery Only Prompt</string>
    <string name="gallery_chooser_text">Select Gallery Prompt</string>
    
    <!-- Button Listener Example -->
    <string name="button_listener_title">Button Listener Example</string>
    <string name="button_implement_onclick_listener_text">Button with implement OnClickListener</string>
    <string name="button_set_button_object_listener_text">Button with setting button object with OnClickListener</string>
    <string name="button_xml_attribute_text">Button invoke through XML attribute</string>

</resources>