<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/camera_main_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/camera_filepath_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_with_filepath_text"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/camera_no_filepath_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_without_filepath_text"
        android:onClick="onButtonClick" />
    
    <ImageView
        android:id="@+id/camera_image"
        android:contentDescription="@string/imageview_content_description"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/ic_launcher" />

</LinearLayout>